Fix alignment the right way

--- a/divtest/styles.css
+++ b/divtest/styles.css
@@ -20,7 +20,7 @@ body {
 }
 
 .tileMap {
-  position: relative;
+  position: absolute;
   font-size: 0; /* get rid of gaps between inline divs */
   overflow: hidden;
 }
